# sentiment-analysis-lstm-tensorflow

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Projek_Akhir_Analisis_Big_Data_(Colab).ipynb  README.md  clean_text.py  config.py  data.py  main.py  model.py  plot.py  preprocessing.py  pyproject.toml  requirements.txt  setup.cfg  test.py  tokenization.py  word_embedding.py
notebooks/: LSTM-sentiment-analysis.ipynb
src/: config.py  main.py
src/plot/: plot.py
src/preprocessing/: tokenization.py
