[tool.poetry]
name = "sentiment-analysis-lstm-tensorflow"
version = "0.1.0"
description = "Sentiment Analysis, with spark as resilient data loader, and tensorflow multiworker for distributed training"
authors = ["Hensel Jahja <henseljahja@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
pyspark = "^3.1.2"
tensorflow = "2.5.0"
pandas = "^1.3.3"
nltk = "^3.6.2"
scikit-learn = "^0.24.2"
matplotlib = "^3.4.3"
seaborn = "^0.11.2"
flake8 = "^3.9.2"
mypy = "^0.910"
findspark = "^1.4.2"
black = "21.5b2"
isort = "^5.9.3"
pre-commit = "^2.15.0"
wordcloud = "^1.8.1"
rope = "^0.20.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"